[package]
name = "nest"
version = "0.1.0"
authors = ["Skadic <etieti22@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "1.2.1"
lazy_static = "1.4.0"
hex = "0.4.0"
input-stream = "0.4.0"
minifb = "0.16.0"
image = "0.23.3"
rand = "0.7.3"
rusttype = "0.8.3"